--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,37 @@
 @media only screen and (max-width: 768px){
     
+    #logoBack{
+        height: 600px;
+    }
+    /* Icons */
     .icons{
-        grid-template-rows: repeat(3,auto);
+        grid-template-rows: repeat(4,100px);
+    }
+    /* Sobre */
+    .about{
+        grid-template-rows: repeat(2,350px);
+    }
+
+    /* Fotos */
+    .album{
+        grid-template-rows: repeat(4,150px);
+        grid-template-columns: repeat(2,auto);
+    }
+
+    /* Redes sociais */
+    .socialMidia{
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(3,100px);
+    }
+    .socialLink:nth-child(1){
+        grid-column: 1/2;
+    }
+    .socialLink:nth-child(2){
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .socialLink:nth-child(3){
+        grid-column: 1/2;
+        grid-row: 3/4;
     }
 }
