--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,24 +1,11 @@
 @media only screen and (min-width: 1024px){
-    *{
-        margin:0;
-        padding:auto;
-        box-sizing: border-box;
-        text-align: center;
-        text-decoration: inherit;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-
     /* Barra de navegação */
     .navBar{
-        display: grid;
         position: fixed;
         width: 100%;
         grid-template-columns: repeat(4,auto); 
         grid-template-rows: 30px;
         grid-gap: 5px;
-    }
-    .navBox{
-        background-color: rgb(22, 100, 160);
     }
 
     /* Logo Com Background */
@@ -26,40 +13,31 @@
         width: 100%;
         height: 90vh;
         padding: 10px;
-        background-color: rgb(190, 210, 190);
     }
 
     /* Frases/Icones */
     .icons{
-        display: grid;
-        grid-template-columns: repeat(3,auto);
+        grid-template-columns: repeat(4,auto);
         grid-template-rows: 100px;
-    }
-    .iconPhr{
-        background-color: rgb(220, 10, 160);
     }
 
     /* Bem Vindo/Sobre  */
     .about{
-        display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 80vh;
         grid-gap: 5px;
     }
-    .aboutMe{
-        background-color: rgb(160, 220, 10);
-    }
 
     /* Coletânia de Fotos */
     .album{
-        display: grid;
         grid-template-columns: repeat(4,1fr); 
         grid-template-rows: repeat(2, 200px);
     }
+    /* Links para Contato */
     .socialMidia{
-        display: grid;
         grid-template-columns: repeat(3,0.5fr);
-        grid-template-rows: repeat(2, 20px);
-        grid-gap: 100px;
+        grid-template-rows: repeat(2, 100px);
+        grid-gap: 30px;
+        margin: 0 30px 0 30px;  
     }
 }
