--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,33 @@
 
 /* declarando variáveis */
-:root{--cor1: #0F3;
-
+*{
+    display: grid;
+    margin: 0;
+    padding: auto;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: inherit;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+:root{
+    --cor1: #0F3;
+    --cor2: #0DD;
+    --cor3: #FF0F;
+    --cor4: #E2E;
+    --cor5: #D00;
+}
+navBox{
+    background-color: var(--cor2);
+}
+#logoBack{
+    background-color: var(--cor1);
+}
+.iconPhr{
+    background-color: var(--cor4);
+}
+.aboutMe{
+    background-color: var(--cor3);
+}
+.socialLink{
+    background-color: var(--cor5);
 }
