--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
     --cor4: #E2E;
     --cor5: #D00;
 }
-navBox{
+.navBox{
     background-color: var(--cor2);
 }
 #logoBack{
@@ -27,6 +27,10 @@ navBox{
 }
 .aboutMe{
     background-color: var(--cor3);
+}
+.photos img{
+    width: 100%;
+    height:100%;
 }
 .socialLink{
     background-color: var(--cor5);
