--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,5 @@
     @import url("mobile.css");
     @import url("tablet.css");
     @import url("desktop.css");
+    @import url("animated.css");
+    @import url("lightbox.css");
