--- a/css/tablet.css
+++ b/css/tablet.css
@@ -8,6 +8,9 @@
         grid-template-columns: repeat(4,auto); 
         grid-template-rows: 30px;
     }
+    .btnMenu{
+        display: none;
+    }
     .dropdown{
         display: none;
     }
