--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ i#iconInicio,#iconFim{
 .iconDescr{
     color:var(--cor2);;
 }
-.aboutMe{
+.about{
     background-color: var(--cor5);
 }
 .photos img{
@@ -80,7 +80,7 @@ i#iconInicio,#iconFim{
     opacity: 0.8;
     background: var(--cor5);
 }
-.socialLink{
+.socialMedia{
     background-color: var(--cor1);
 }
 #copyrightFooter{
