--- a/css/desktop.css
+++ b/css/desktop.css
@@ -30,7 +30,7 @@
     .about{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 80vh;
+        grid-template-rows: 40vh 40vh;
         grid-gap: 5px;
     }
 
@@ -38,14 +38,17 @@
     .album{
         display: grid;
         grid-template-columns: repeat(4,1fr); 
-        grid-template-rows: repeat(2, 200px);
+        grid-template-rows: repeat(2, 30vmin);
+        grid-gap: 10px;
     }
     /* Links para Contato */
-    .socialMidia{
+    .socialMedia{
         display: grid;
         grid-template-columns: repeat(3,0.5fr);
         grid-template-rows: repeat(2, 100px);
-        grid-gap: 30px;
-        margin: 0 30px 0 30px;  
+        grid-gap: 30px; 
+    }
+    .socialLink{
+        margin: 0 30px 0 30px; 
     }
 }
