--- a/css/mobile.css
+++ b/css/mobile.css
@@ -49,11 +49,12 @@
     /* Fotos */
     .album{
         display: grid;
-        grid-template-rows: repeat(4,150px);
-        grid-template-columns: repeat(2,0.5fr);
+        grid-template-rows: repeat(4,30vw);
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 5px;
     }
     /* Redes sociais */
-    .socialMidia{
+    .socialMedia{
         display: grid;
         grid-template-columns: repeat(2,auto);
         grid-template-rows: repeat(3,100px);
