--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,7 +4,7 @@
         display: grid;
         position: fixed;
         width: 100%;
-        grid-template-columns: repeat(4,auto); 
+        grid-template-columns: repeat(5,auto); 
         grid-template-rows: 30px;
     }
     .btnMenu{
@@ -26,27 +26,70 @@
         grid-template-rows: 100px;
     }
 
-    /* Bem Vindo/Sobre  */
-    .about{
+    /* Sobre Projeto Focus */
+    .aboutProject{
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 40vh 40vh;
-        grid-gap: 5px;
+        grid-template-rows: 15vh 40vh 15vh;
+    }
+    #projectText{
+        display: grid;
+        grid-template-rows: 10vh 15vh;
+        margin: 5vh 10vh 5vh 10vh;
+    }
+        /* Ícones 1-superior; 2-inferior */
+    #iconsProject1{
+        padding: 20px;
+        background-color:white;
+    }
+    #iconsProject1,#iconsProject2{
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-around;
+        font-size: 4vh;
     }
 
     /* Coletânia de Fotos */
     .album{
         display: grid;
         grid-template-columns: repeat(4,1fr); 
-        grid-template-rows: repeat(2, 30vmin);
-        grid-gap: 10px;
+        grid-template-rows: repeat(2, 20vh);
+        grid-gap: 15px;
+        margin: 0 15px 0 15px;
     }
+    #videoPart{
+        display: grid;
+        grid-template-rows: 10vh 20vh;
+        grid-template-columns: auto;
+        margin: 7vh 0 7vh 0;
+    }
+    #videoIcon{
+        font-size: 110px;
+    }
+    /* Autores  */
+    .about{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 40vh 40vh;
+        grid-gap: 5px;
+        padding: 3%;
+        margin: 0 5vh 5vh 5vh;
+    }
+    .aboutNames{
+        margin: 12vh  0 0;
+    }
+    div.aboutUs{
+        margin: 0 5vw 0 0
+    }
+    img.imageUs{
+        margin-top: 80px;
+    }
+
     /* Links para Contato */
     .socialMedia{
         display: grid;
-        grid-template-columns: repeat(3,0.5fr);
+        grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(2, 100px);
-        grid-gap: 30px; 
     }
     .socialLink{
         margin: 0 30px 0 30px; 
